backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FUNCTION_DECLARATION
    LOGICAL_OP_AND
    LOGICAL_OP_OR

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> expression END_LINE
Rule 5     statement -> assignment END_LINE
Rule 6     statement -> declaration END_LINE
Rule 7     statement -> conditional
Rule 8     statement -> loop
Rule 9     statement -> return_statement END_LINE
Rule 10    statement -> break_statement END_LINE
Rule 11    statement -> comment
Rule 12    expression -> binary_expression
Rule 13    expression -> unitary_expression
Rule 14    expression -> primary_expression
Rule 15    binary_expression -> primary_expression PLUS_OP primary_expression
Rule 16    binary_expression -> primary_expression MINUS_OP primary_expression
Rule 17    binary_expression -> primary_expression MUL_OP primary_expression
Rule 18    binary_expression -> primary_expression DIV_OP primary_expression
Rule 19    binary_expression -> primary_expression LESS_OP primary_expression
Rule 20    binary_expression -> primary_expression GREATER_OP primary_expression
Rule 21    binary_expression -> primary_expression LESS_EQUAL_OP primary_expression
Rule 22    binary_expression -> primary_expression GREATER_EQUAL_OP primary_expression
Rule 23    binary_expression -> primary_expression EQUAL_OP primary_expression
Rule 24    binary_expression -> primary_expression DIFFERENT_OP primary_expression
Rule 25    unitary_expression -> MINUS_OP primary_expression
Rule 26    unitary_expression -> LOGICAL_OP_NOT primary_expression
Rule 27    primary_expression -> LPAREN expression RPAREN
Rule 28    primary_expression -> term
Rule 29    term -> NUMBER_INTEGER
Rule 30    term -> NUMBER_FLOAT
Rule 31    term -> VARIABLE
Rule 32    term -> TRUE
Rule 33    term -> FALSE
Rule 34    term -> NULL
Rule 35    term -> TEXT_STRING
Rule 36    term -> TEXT_CHAR
Rule 37    assignment -> VARIABLE ASSIGNMENT_OP expression
Rule 38    declaration -> TYPE_BOOLEAN VARIABLE
Rule 39    declaration -> TYPE_STRING VARIABLE
Rule 40    declaration -> TYPE_CHAR VARIABLE
Rule 41    declaration -> TYPE_INTEGER VARIABLE
Rule 42    declaration -> TYPE_FLOAT VARIABLE
Rule 43    declaration -> TYPE_BOOLEAN assignment
Rule 44    declaration -> TYPE_STRING assignment
Rule 45    declaration -> TYPE_CHAR assignment
Rule 46    declaration -> TYPE_INTEGER assignment
Rule 47    declaration -> TYPE_FLOAT assignment
Rule 48    conditional -> CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list
Rule 49    conditional -> CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list CONDITIONAL2 STRUCTURE_BODY statement_list
Rule 50    loop -> LOOP1 LPAREN expression RPAREN STRUCTURE_BODY statement_list
Rule 51    loop -> LOOP2 LPAREN assignment SEPARATION expression SEPARATION assignment RPAREN STRUCTURE_BODY statement_list
Rule 52    return_statement -> RETURN expression
Rule 53    return_statement -> RETURN
Rule 54    break_statement -> BREAK
Rule 55    comment -> COMMENT

Terminals, with rules where they appear

ASSIGNMENT_OP        : 37
BREAK                : 54
COMMENT              : 55
CONDITIONAL1         : 48 49
CONDITIONAL2         : 49
DIFFERENT_OP         : 24
DIV_OP               : 18
END_LINE             : 4 5 6 9 10
EQUAL_OP             : 23
FALSE                : 33
FUNCTION_DECLARATION : 
GREATER_EQUAL_OP     : 22
GREATER_OP           : 20
LESS_EQUAL_OP        : 21
LESS_OP              : 19
LOGICAL_OP_AND       : 
LOGICAL_OP_NOT       : 26
LOGICAL_OP_OR        : 
LOOP1                : 50
LOOP2                : 51
LPAREN               : 27 48 49 50 51
MINUS_OP             : 16 25
MUL_OP               : 17
NULL                 : 34
NUMBER_FLOAT         : 30
NUMBER_INTEGER       : 29
PLUS_OP              : 15
RETURN               : 52 53
RPAREN               : 27 48 49 50 51
SEPARATION           : 51 51
STRUCTURE_BODY       : 48 49 49 50 51
TEXT_CHAR            : 36
TEXT_STRING          : 35
TRUE                 : 32
TYPE_BOOLEAN         : 38 43
TYPE_CHAR            : 40 45
TYPE_FLOAT           : 42 47
TYPE_INTEGER         : 41 46
TYPE_STRING          : 39 44
VARIABLE             : 31 37 38 39 40 41 42
error                : 

Nonterminals, with rules where they appear

assignment           : 5 43 44 45 46 47 51 51
binary_expression    : 12
break_statement      : 10
comment              : 11
conditional          : 7
declaration          : 6
expression           : 4 27 37 48 49 50 51 52
loop                 : 8
primary_expression   : 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 26
program              : 0
return_statement     : 9
statement            : 2 3
statement_list       : 1 2 48 49 49 50 51
term                 : 28
unitary_expression   : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . expression END_LINE
    (5) statement -> . assignment END_LINE
    (6) statement -> . declaration END_LINE
    (7) statement -> . conditional
    (8) statement -> . loop
    (9) statement -> . return_statement END_LINE
    (10) statement -> . break_statement END_LINE
    (11) statement -> . comment
    (12) expression -> . binary_expression
    (13) expression -> . unitary_expression
    (14) expression -> . primary_expression
    (37) assignment -> . VARIABLE ASSIGNMENT_OP expression
    (38) declaration -> . TYPE_BOOLEAN VARIABLE
    (39) declaration -> . TYPE_STRING VARIABLE
    (40) declaration -> . TYPE_CHAR VARIABLE
    (41) declaration -> . TYPE_INTEGER VARIABLE
    (42) declaration -> . TYPE_FLOAT VARIABLE
    (43) declaration -> . TYPE_BOOLEAN assignment
    (44) declaration -> . TYPE_STRING assignment
    (45) declaration -> . TYPE_CHAR assignment
    (46) declaration -> . TYPE_INTEGER assignment
    (47) declaration -> . TYPE_FLOAT assignment
    (48) conditional -> . CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list
    (49) conditional -> . CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list CONDITIONAL2 STRUCTURE_BODY statement_list
    (50) loop -> . LOOP1 LPAREN expression RPAREN STRUCTURE_BODY statement_list
    (51) loop -> . LOOP2 LPAREN assignment SEPARATION expression SEPARATION assignment RPAREN STRUCTURE_BODY statement_list
    (52) return_statement -> . RETURN expression
    (53) return_statement -> . RETURN
    (54) break_statement -> . BREAK
    (55) comment -> . COMMENT
    (15) binary_expression -> . primary_expression PLUS_OP primary_expression
    (16) binary_expression -> . primary_expression MINUS_OP primary_expression
    (17) binary_expression -> . primary_expression MUL_OP primary_expression
    (18) binary_expression -> . primary_expression DIV_OP primary_expression
    (19) binary_expression -> . primary_expression LESS_OP primary_expression
    (20) binary_expression -> . primary_expression GREATER_OP primary_expression
    (21) binary_expression -> . primary_expression LESS_EQUAL_OP primary_expression
    (22) binary_expression -> . primary_expression GREATER_EQUAL_OP primary_expression
    (23) binary_expression -> . primary_expression EQUAL_OP primary_expression
    (24) binary_expression -> . primary_expression DIFFERENT_OP primary_expression
    (25) unitary_expression -> . MINUS_OP primary_expression
    (26) unitary_expression -> . LOGICAL_OP_NOT primary_expression
    (27) primary_expression -> . LPAREN expression RPAREN
    (28) primary_expression -> . term
    (29) term -> . NUMBER_INTEGER
    (30) term -> . NUMBER_FLOAT
    (31) term -> . VARIABLE
    (32) term -> . TRUE
    (33) term -> . FALSE
    (34) term -> . NULL
    (35) term -> . TEXT_STRING
    (36) term -> . TEXT_CHAR

    VARIABLE        shift and go to state 15
    TYPE_BOOLEAN    shift and go to state 16
    TYPE_STRING     shift and go to state 17
    TYPE_CHAR       shift and go to state 18
    TYPE_INTEGER    shift and go to state 19
    TYPE_FLOAT      shift and go to state 20
    CONDITIONAL1    shift and go to state 21
    LOOP1           shift and go to state 23
    LOOP2           shift and go to state 24
    RETURN          shift and go to state 25
    BREAK           shift and go to state 26
    COMMENT         shift and go to state 27
    MINUS_OP        shift and go to state 28
    LOGICAL_OP_NOT  shift and go to state 29
    LPAREN          shift and go to state 22
    NUMBER_INTEGER  shift and go to state 31
    NUMBER_FLOAT    shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    NULL            shift and go to state 35
    TEXT_STRING     shift and go to state 36
    TEXT_CHAR       shift and go to state 37

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    assignment                     shift and go to state 5
    declaration                    shift and go to state 6
    conditional                    shift and go to state 7
    loop                           shift and go to state 8
    return_statement               shift and go to state 9
    break_statement                shift and go to state 10
    comment                        shift and go to state 11
    binary_expression              shift and go to state 12
    unitary_expression             shift and go to state 13
    primary_expression             shift and go to state 14
    term                           shift and go to state 30

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . expression END_LINE
    (5) statement -> . assignment END_LINE
    (6) statement -> . declaration END_LINE
    (7) statement -> . conditional
    (8) statement -> . loop
    (9) statement -> . return_statement END_LINE
    (10) statement -> . break_statement END_LINE
    (11) statement -> . comment
    (12) expression -> . binary_expression
    (13) expression -> . unitary_expression
    (14) expression -> . primary_expression
    (37) assignment -> . VARIABLE ASSIGNMENT_OP expression
    (38) declaration -> . TYPE_BOOLEAN VARIABLE
    (39) declaration -> . TYPE_STRING VARIABLE
    (40) declaration -> . TYPE_CHAR VARIABLE
    (41) declaration -> . TYPE_INTEGER VARIABLE
    (42) declaration -> . TYPE_FLOAT VARIABLE
    (43) declaration -> . TYPE_BOOLEAN assignment
    (44) declaration -> . TYPE_STRING assignment
    (45) declaration -> . TYPE_CHAR assignment
    (46) declaration -> . TYPE_INTEGER assignment
    (47) declaration -> . TYPE_FLOAT assignment
    (48) conditional -> . CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list
    (49) conditional -> . CONDITIONAL1 LPAREN expression RPAREN STRUCTURE_BODY statement_list CONDITIONAL2 STRUCTURE_BODY statement_list
    (50) loop -> . LOOP1 LPAREN expression RPAREN STRUCTURE_BODY statement_list
    (51) loop -> . LOOP2 LPAREN assignment SEPARATION expression SEPARATION assignment RPAREN STRUCTURE_BODY statement_list
    (52) return_statement -> . RETURN expression
    (53) return_statement -> . RETURN
    (54) break_statement -> . BREAK
    (55) comment -> . COMMENT
    (15) binary_expression -> . primary_expression PLUS_OP primary_expression
    (16) binary_expression -> . primary_expression MINUS_OP primary_expression
    (17) binary_expression -> . primary_expression MUL_OP primary_expression
    (18) binary_expression -> . primary_expression DIV_OP primary_expression
    (19) binary_expression -> . primary_expression LESS_OP primary_expression
    (20) binary_expression -> . primary_expression GREATER_OP primary_expression
    (21) binary_expression -> . primary_expression LESS_EQUAL_OP primary_expression
    (22) binary_expression -> . primary_expression GREATER_EQUAL_OP primary_expression
    (23) binary_expression -> . primary_expression EQUAL_OP primary_expression
    (24) binary_expression -> . primary_expression DIFFERENT_OP primary_expression
    (25) unitary_expression -> . MINUS_OP primary_expression
    (26) unitary_expression -> . LOGICAL_OP_NOT primary_expression
    (27) primary_expression -> . LPAREN expression RPAREN
    (28) primary_expression -> . term
    (29) term -> . NUMBER_INTEGER
    (30) term -> . NUMBER_FLOAT
    (31) term -> . VARIABLE
    (32) term -> . TRUE
    (33) term -> . FALSE
    (34) term -> . NULL
    (35) term -> . TEXT_STRING
    (36) term -> . TEXT_CHAR

    $end            reduce using rule 1 (program -> statement_list .)
    VARIABLE        shift and go to state 15
    TYPE_BOOLEAN    shift and go to state 16
    TYPE_STRING     shift and go to state 17
    TYPE_CHAR       shift and go to state 18
    TYPE_INTEGER    shift and go to state 19
    TYPE_FLOAT      shift and go to state 20
    CONDITIONAL1    shift and go to state 21
    LOOP1           shift and go to state 23
    LOOP2           shift and go to state 24
    RETURN          shift and go to state 25
    BREAK           shift and go to state 26
    COMMENT         shift and go to state 27
    MINUS_OP        shift and go to state 28
    LOGICAL_OP_NOT  shift and go to state 29
    LPAREN          shift and go to state 22
    NUMBER_INTEGER  shift and go to state 31
    NUMBER_FLOAT    shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    NULL            shift and go to state 35
    TEXT_STRING     shift and go to state 36
    TEXT_CHAR       shift and go to state 37

    statement                      shift and go to state 38
    expression                     shift and go to state 4
    assignment                     shift and go to state 5
    declaration                    shift and go to state 6
    conditional                    shift and go to state 7
    loop                           shift and go to state 8
    return_statement               shift and go to state 9
    break_statement                shift and go to state 10
    comment                        shift and go to state 11
    binary_expression              shift and go to state 12
    unitary_expression             shift and go to state 13
    primary_expression             shift and go to state 14
    term                           shift and go to state 30

state 3

    (3) statement_list -> statement .

    VARIABLE        reduce using rule 3 (statement_list -> statement .)
    TYPE_BOOLEAN    reduce using rule 3 (statement_list -> statement .)
    TYPE_STRING     reduce using rule 3 (statement_list -> statement .)
    TYPE_CHAR       reduce using rule 3 (statement_list -> statement .)
    TYPE_INTEGER    reduce using rule 3 (statement_list -> statement .)
    TYPE_FLOAT      reduce using rule 3 (statement_list -> statement .)
    CONDITIONAL1    reduce using rule 3 (statement_list -> statement .)
    LOOP1           reduce using rule 3 (statement_list -> statement .)
    LOOP2           reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    BREAK           reduce using rule 3 (statement_list -> statement .)
    COMMENT         reduce using rule 3 (statement_list -> statement .)
    MINUS_OP        reduce using rule 3 (statement_list -> statement .)
    LOGICAL_OP_NOT  reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    NUMBER_INTEGER  reduce using rule 3 (statement_list -> statement .)
    NUMBER_FLOAT    reduce using rule 3 (statement_list -> statement .)
    TRUE            reduce using rule 3 (statement_list -> statement .)
    FALSE           reduce using rule 3 (statement_list -> statement .)
    NULL            reduce using rule 3 (statement_list -> statement .)
    TEXT_STRING     reduce using rule 3 (statement_list -> statement .)
    TEXT_CHAR       reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    CONDITIONAL2    reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> expression . END_LINE

    END_LINE        shift and go to state 39


state 5

    (5) statement -> assignment . END_LINE

    END_LINE        shift and go to state 40


state 6

    (6) statement -> declaration . END_LINE

    END_LINE        shift and go to state 41


state 7

    (7) statement -> conditional .

    VARIABLE        reduce using rule 7 (statement -> conditional .)
    TYPE_BOOLEAN    reduce using rule 7 (statement -> conditional .)
    TYPE_STRING     reduce using rule 7 (statement -> conditional .)
    TYPE_CHAR       reduce using rule 7 (statement -> conditional .)
    TYPE_INTEGER    reduce using rule 7 (statement -> conditional .)
    TYPE_FLOAT      reduce using rule 7 (statement -> conditional .)
    CONDITIONAL1    reduce using rule 7 (statement -> conditional .)
    LOOP1           reduce using rule 7 (statement -> conditional .)
    LOOP2           reduce using rule 7 (statement -> conditional .)
    RETURN          reduce using rule 7 (statement -> conditional .)
    BREAK           reduce using rule 7 (statement -> conditional .)
    COMMENT         reduce using rule 7 (statement -> conditional .)
    MINUS_OP        reduce using rule 7 (statement -> conditional .)
    LOGICAL_OP_NOT  reduce using rule 7 (statement -> conditional .)
    LPAREN          reduce using rule 7 (statement -> conditional .)
    NUMBER_INTEGER  reduce using rule 7 (statement -> conditional .)
    NUMBER_FLOAT    reduce using rule 7 (statement -> conditional .)
    TRUE            reduce using rule 7 (statement -> conditional .)
    FALSE           reduce using rule 7 (statement -> conditional .)
    NULL            reduce using rule 7 (statement -> conditional .)
    TEXT_STRING     reduce using rule 7 (statement -> conditional .)
    TEXT_CHAR       reduce using rule 7 (statement -> conditional .)
    $end            reduce using rule 7 (statement -> conditional .)
    CONDITIONAL2    reduce using rule 7 (statement -> conditional .)


state 8

    (8) statement -> loop .

    VARIABLE        reduce using rule 8 (statement -> loop .)
    TYPE_BOOLEAN    reduce using rule 8 (statement -> loop .)
    TYPE_STRING     reduce using rule 8 (statement -> loop .)
    TYPE_CHAR       reduce using rule 8 (statement -> loop .)
    TYPE_INTEGER    reduce using rule 8 (statement -> loop .)
    TYPE_FLOAT      reduce using rule 8 (statement -> loop .)
    CONDITIONAL1    reduce using rule 8 (statement -> loop .)
    LOOP1           reduce using rule 8 (statement -> loop .)
    LOOP2           reduce using rule 8 (statement -> loop .)
    RETURN          reduce using rule 8 (statement -> loop .)
    BREAK           reduce using rule 8 (statement -> loop .)
    COMMENT         reduce using rule 8 (statement -> loop .)
    MINUS_OP        reduce using rule 8 (statement -> loop .)
    LOGICAL_OP_NOT  reduce using rule 8 (statement -> loop .)
    LPAREN          reduce using rule 8 (statement -> loop .)
    NUMBER_INTEGER  reduce using rule 8 (statement -> loop .)
    NUMBER_FLOAT    reduce using rule 8 (statement -> loop .)
    TRUE            reduce using rule 8 (statement -> loop .)
    FALSE           reduce using rule 8 (statement -> loop .)
    NULL            reduce using rule 8 (statement -> loop .)
    TEXT_STRING     reduce using rule 8 (statement -> loop .)
    TEXT_CHAR       reduce using rule 8 (statement -> loop .)
    $end            reduce using rule 8 (statement -> loop .)
    CONDITIONAL2    reduce using rule 8 (statement -> loop .)


state 9

    (9) statement -> return_statement . END_LINE

    END_LINE        shift and go to state 42


state 10

    (10) statement -> break_statement . END_LINE

    END_LINE        shift and go to state 43


state 11

    (11) statement -> comment .

    VARIABLE        reduce using rule 11 (statement -> comment .)
    TYPE_BOOLEAN    reduce using rule 11 (statement -> comment .)
    TYPE_STRING     reduce using rule 11 (statement -> comment .)
    TYPE_CHAR       reduce using rule 11 (statement -> comment .)
    TYPE_INTEGER    reduce using rule 11 (statement -> comment .)
    TYPE_FLOAT      reduce using rule 11 (statement -> comment .)
    CONDITIONAL1    reduce using rule 11 (statement -> comment .)
    LOOP1           reduce using rule 11 (statement -> comment .)
    LOOP2           reduce using rule 11 (statement -> comment .)
    RETURN          reduce using rule 11 (statement -> comment .)
    BREAK           reduce using rule 11 (statement -> comment .)
    COMMENT         reduce using rule 11 (statement -> comment .)
    MINUS_OP        reduce using rule 11 (statement -> comment .)
    LOGICAL_OP_NOT  reduce using rule 11 (statement -> comment .)
    LPAREN          reduce using rule 11 (statement -> comment .)
    NUMBER_INTEGER  reduce using rule 11 (statement -> comment .)
    NUMBER_FLOAT    reduce using rule 11 (statement -> comment .)
    TRUE            reduce using rule 11 (statement -> comment .)
    FALSE           reduce using rule 11 (statement -> comment .)
    NULL            reduce using rule 11 (statement -> comment .)
    TEXT_STRING     reduce using rule 11 (statement -> comment .)
    TEXT_CHAR       reduce using rule 11 (statement -> comment .)
    $end            reduce using rule 11 (statement -> comment .)
    CONDITIONAL2    reduce using rule 11 (statement -> comment .)


state 12

    (12) expression -> binary_expression .

    END_LINE        reduce using rule 12 (expression -> binary_expression .)
    RPAREN          reduce using rule 12 (expression -> binary_expression .)
    SEPARATION      reduce using rule 12 (expression -> binary_expression .)


state 13

    (13) expression -> unitary_expression .

    END_LINE        reduce using rule 13 (expression -> unitary_expression .)
    RPAREN          reduce using rule 13 (expression -> unitary_expression .)
    SEPARATION      reduce using rule 13 (expression -> unitary_expression .)


state 14

    (14) expression -> primary_expression .
    (15) binary_expression -> primary_expression . PLUS_OP primary_expression
    (16) binary_expression -> primary_expression . MINUS_OP primary_expression
    (17) binary_expression -> primary_expression . MUL_OP primary_expression
    (18) binary_expression -> primary_expression . DIV_OP primary_expression
    (19) binary_expression -> primary_expression . LESS_OP primary_expression
    (20) binary_expression -> primary_expression . GREATER_OP primary_expression
    (21) binary_expression -> primary_expression . LESS_EQUAL_OP primary_expression
    (22) binary_expression -> primary_expression . GREATER_EQUAL_OP primary_expression
    (23) binary_expression -> primary_expression . EQUAL_OP primary_expression
    (24) binary_expression -> primary_expression . DIFFERENT_OP primary_expression

    END_LINE        reduce using rule 14 (expression -> primary_expression .)
    RPAREN          reduce using rule 14 (expression -> primary_expression .)
    SEPARATION      reduce using rule 14 (expression -> primary_expression .)
    PLUS_OP         shift and go to state 44
    MINUS_OP        shift and go to state 45
    MUL_OP          shift and go to state 46
    DIV_OP          shift and go to state 47
    LESS_OP         shift and go to state 48
    GREATER_OP      shift and go to state 49
    LESS_EQUAL_OP   shift and go to state 50
    GREATER_EQUAL_OP shift and go to state 51
    EQUAL_OP        shift and go to state 52
    DIFFERENT_OP    shift and go to state 53


state 15

    (37) assignment -> VARIABLE . ASSIGNMENT_OP expression
    (31) term -> VARIABLE .

    ASSIGNMENT_OP   shift and go to state 54
    PLUS_OP         reduce using rule 31 (term -> VARIABLE .)
    MINUS_OP        reduce using rule 31 (term -> VARIABLE .)
    MUL_OP          reduce using rule 31 (term -> VARIABLE .)
    DIV_OP          reduce using rule 31 (term -> VARIABLE .)
    LESS_OP         reduce using rule 31 (term -> VARIABLE .)
    GREATER_OP      reduce using rule 31 (term -> VARIABLE .)
    LESS_EQUAL_OP   reduce using rule 31 (term -> VARIABLE .)
    GREATER_EQUAL_OP reduce using rule 31 (term -> VARIABLE .)
    EQUAL_OP        reduce using rule 31 (term -> VARIABLE .)
    DIFFERENT_OP    reduce using rule 31 (term -> VARIABLE .)
    END_LINE        reduce using rule 31 (term -> VARIABLE .)


state 16

    (38) declaration -> TYPE_BOOLEAN . VARIABLE
    (43) declaration -> TYPE_BOOLEAN . assignment
    (37) assignment -> . VARIABLE ASSIGNMENT_OP expression

    VARIABLE        shift and go to state 55

    assignment                     shift and go to state 56

state 17

    (39) declaration -> TYPE_STRING . VARIABLE
    (44) declaration -> TYPE_STRING . assignment
    (37) assignment -> . VARIABLE ASSIGNMENT_OP expression

    VARIABLE        shift and go to state 57

    assignment                     shift and go to state 58

state 18

    (40) declaration -> TYPE_CHAR . VARIABLE
    (45) declaration -> TYPE_CHAR . assignment
    (37) assignment -> . VARIABLE ASSIGNMENT_OP expression

    VARIABLE        shift and go to state 59

    assignment                     shift and go to state 60

state 19

    (41) declaration -> TYPE_INTEGER . VARIABLE
    (46) declaration -> TYPE_INTEGER . assignment
    (37) assignment -> . VARIABLE ASSIGNMENT_OP expression

    VARIABLE        shift and go to state 61

    assignment                     shift and go to state 62

state 20

    (42) declaration -> TYPE_FLOAT . VARIABLE
    (47) declaration -> TYPE_FLOAT . assignment
    (37) assignment -> . VARIABLE ASSIGNMENT_OP expression

    VARIABLE        shift and go to state 63

    assignment                     shift and go to state 64

state 21
